DONE✅ add updateUserBalance method
