# api/restapi/operations/post_users_id_referrer_responses.go
@@ -1,118 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package operations
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	"main/internal/models"
-)
-
-// PostUsersIDReferrerCreatedCode is the HTTP code returned for type PostUsersIDReferrerCreated
-const PostUsersIDReferrerCreatedCode int = 201
-
-/*
-PostUsersIDReferrerCreated User's task was completed
-
-swagger:response postUsersIdReferrerCreated
-*/
-type PostUsersIDReferrerCreated struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Referrer `json:"body,omitempty"`
-}
-
-// NewPostUsersIDReferrerCreated creates PostUsersIDReferrerCreated with default headers values
-func NewPostUsersIDReferrerCreated() *PostUsersIDReferrerCreated {
-
-	return &PostUsersIDReferrerCreated{}
-}
-
-// WithPayload adds the payload to the post users Id referrer created response
-func (o *PostUsersIDReferrerCreated) WithPayload(payload *models.Referrer) *PostUsersIDReferrerCreated {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post users Id referrer created response
-func (o *PostUsersIDReferrerCreated) SetPayload(payload *models.Referrer) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostUsersIDReferrerCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(201)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-/*
-PostUsersIDReferrerDefault Общая ошибка
-
-swagger:response postUsersIdReferrerDefault
-*/
-type PostUsersIDReferrerDefault struct {
-	_statusCode int
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ErrorResponse `json:"body,omitempty"`
-}
-
-// NewPostUsersIDReferrerDefault creates PostUsersIDReferrerDefault with default headers values
-func NewPostUsersIDReferrerDefault(code int) *PostUsersIDReferrerDefault {
-	if code <= 0 {
-		code = 500
-	}
-
-	return &PostUsersIDReferrerDefault{
-		_statusCode: code,
-	}
-}
-
-// WithStatusCode adds the status to the post users ID referrer default response
-func (o *PostUsersIDReferrerDefault) WithStatusCode(code int) *PostUsersIDReferrerDefault {
-	o._statusCode = code
-	return o
-}
-
-// SetStatusCode sets the status to the post users ID referrer default response
-func (o *PostUsersIDReferrerDefault) SetStatusCode(code int) {
-	o._statusCode = code
-}
-
-// WithPayload adds the payload to the post users ID referrer default response
-func (o *PostUsersIDReferrerDefault) WithPayload(payload *models.ErrorResponse) *PostUsersIDReferrerDefault {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post users ID referrer default response
-func (o *PostUsersIDReferrerDefault) SetPayload(payload *models.ErrorResponse) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostUsersIDReferrerDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(o._statusCode)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
