# api/restapi/operations/post_users_id_task_complete_responses.go
@@ -1,118 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package operations
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	"main/internal/models"
-)
-
-// PostUsersIDTaskCompleteCreatedCode is the HTTP code returned for type PostUsersIDTaskCompleteCreated
-const PostUsersIDTaskCompleteCreatedCode int = 201
-
-/*
-PostUsersIDTaskCompleteCreated User's task was completed
-
-swagger:response postUsersIdTaskCompleteCreated
-*/
-type PostUsersIDTaskCompleteCreated struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Task `json:"body,omitempty"`
-}
-
-// NewPostUsersIDTaskCompleteCreated creates PostUsersIDTaskCompleteCreated with default headers values
-func NewPostUsersIDTaskCompleteCreated() *PostUsersIDTaskCompleteCreated {
-
-	return &PostUsersIDTaskCompleteCreated{}
-}
-
-// WithPayload adds the payload to the post users Id task complete created response
-func (o *PostUsersIDTaskCompleteCreated) WithPayload(payload *models.Task) *PostUsersIDTaskCompleteCreated {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post users Id task complete created response
-func (o *PostUsersIDTaskCompleteCreated) SetPayload(payload *models.Task) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostUsersIDTaskCompleteCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(201)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-/*
-PostUsersIDTaskCompleteDefault Общая ошибка
-
-swagger:response postUsersIdTaskCompleteDefault
-*/
-type PostUsersIDTaskCompleteDefault struct {
-	_statusCode int
-
-	/*
-	  In: Body
-	*/
-	Payload *models.ErrorResponse `json:"body,omitempty"`
-}
-
-// NewPostUsersIDTaskCompleteDefault creates PostUsersIDTaskCompleteDefault with default headers values
-func NewPostUsersIDTaskCompleteDefault(code int) *PostUsersIDTaskCompleteDefault {
-	if code <= 0 {
-		code = 500
-	}
-
-	return &PostUsersIDTaskCompleteDefault{
-		_statusCode: code,
-	}
-}
-
-// WithStatusCode adds the status to the post users ID task complete default response
-func (o *PostUsersIDTaskCompleteDefault) WithStatusCode(code int) *PostUsersIDTaskCompleteDefault {
-	o._statusCode = code
-	return o
-}
-
-// SetStatusCode sets the status to the post users ID task complete default response
-func (o *PostUsersIDTaskCompleteDefault) SetStatusCode(code int) {
-	o._statusCode = code
-}
-
-// WithPayload adds the payload to the post users ID task complete default response
-func (o *PostUsersIDTaskCompleteDefault) WithPayload(payload *models.ErrorResponse) *PostUsersIDTaskCompleteDefault {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post users ID task complete default response
-func (o *PostUsersIDTaskCompleteDefault) SetPayload(payload *models.ErrorResponse) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostUsersIDTaskCompleteDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(o._statusCode)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
