# internal/controller/controller.go
@@ -18,6 +18,7 @@ type Controller interface {
 	PostUser(ctx context.Context, user models.NewUser) (models.User, error)
 	DeleteUserID(ctx context.Context, params operations.DeleteUsersIDParams) error
 	GetUsers(ctx context.Context, params operations.GetUsersLeaderboardParams) ([]*models.User, error)
+	UpdateBalance(ctx context.Context, id int64, amount int64) (models.User, error)
 	PostTask(ctx context.Context, taskData models.NewTask, userID int64) (models.Task, error)
 	PostRef(ctx context.Context, refData models.NewReferrer, userID int64) (models.Referrer, error)
 
