# internal/models/update_user_balance.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// UpdateUserBalance update user balance
+//
+// swagger:model UpdateUserBalance
+type UpdateUserBalance struct {
+
+	// amount
+	Amount int64 `json:"amount,omitempty" validate:"required"`
+}
+
+// Validate validates this update user balance
+func (m *UpdateUserBalance) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this update user balance based on context it is used
+func (m *UpdateUserBalance) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *UpdateUserBalance) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *UpdateUserBalance) UnmarshalBinary(b []byte) error {
+	var res UpdateUserBalance
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
